// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse po files simple file should parse 1`] = `
"# Translations for smell-o-vision.
# Copyright (C) 2020 SmellOVision Inc.
# This file is distributed under the same license as the smell-o-vision package.
# John Doe <john.doe@example.com>, 2020.
# 
msgid \\"\\"
msgstr \\"\\"
\\"Project-Id-Version: smell-o-vision 0.1.1\\\\n\\"
\\"Report-Msgid-Bugs-To: jane.appleseed@example.com\\\\n\\"
\\"POT-Creation-Date: 2020-04-23 08:50+0300\\\\n\\"
\\"PO-Revision-Date: 2020-04-25 23:04+0300\\\\n\\"
\\"Last-Translator: John Doe <John.Doe@example.com>\\\\n\\"
\\"Language-Team: Finnish <fi@li.org>\\\\n\\"
\\"Language: Finnish\\\\n\\"
\\"MIME-Version: 1.0\\\\n\\"
\\"Content-Type: text/plain; charset=utf-8\\\\n\\"
\\"Content-Transfer-Encoding: 8bit\\\\n\\"

msgid \\"no comment\\"
msgstr \\"\\"

#, perl-brace-format, no-perl-format
msgid \\"Hello, {name}!\\"
msgstr \\"\\"

#: src/example.ts:2304 src/other.ts:1303
msgid \\"strawberry\\"
msgstr \\"\\"

msgid \\"One universe\\"
msgid_plural \\"Parallel universes\\"
msgstr[0] \\"\\"
msgstr[1] \\"\\"

msgid \\"escapes\\"
msgstr \\"\\"
\\"\\\\\\\\\\\\a\\\\b\\\\t\\\\n\\"
\\"\\\\v\\\\f\\\\r\\\\\\"\\"

msgid \\"Multi-line msgid\\"
msgstr \\"\\"

msgctxt \\"multi-line\\"
msgid \\"\\"
\\"Hello, world!\\\\n\\"
msgstr \\"\\"

msgid \\"One world\\"
msgid_plural \\"Many worlds\\"
msgstr[0] \\"\\"
msgstr[1] \\"\\"
"
`;

exports[`parse po files warnings should warn about empty flags 1`] = `
"#, fuzzy, perl-brace-format
msgid \\"Hello, {name}!\\"
msgstr \\"\\"
"
`;

exports[`parse po files warnings should warn about invalid references 1`] = `
"#: src/here.js:2304
msgid \\"Hello, {name}!\\"
msgstr \\"\\"
"
`;
